fix: align navbar icons

--- a/src/css/_navbar.css
+++ b/src/css/_navbar.css
@@ -25,3 +25,9 @@
     text-decoration-color: hsl(from var(--green-light) h 60% l);
   }
 }
+
+.nav-icon {
+  display: inline-flex;
+  align-items: center;
+  height: 100%;
+}
